--- a/css/responsive.css
+++ b/css/responsive.css
@@ -34,7 +34,7 @@
   }
 }
 
-@media screen and (max-width: 750px) {
+@media only screen and (max-width: 750px) {
   #navbar nav a {
     font-size: 0.9em;
   }
