--- a/css/responsive.css
+++ b/css/responsive.css
@@ -56,7 +56,7 @@
   }
 }
 
-@media screen and (max-width: 700px) {
+@media only screen and (max-width: 700px) {
   #navbar nav a {
     display: none;
   }
