--- a/css/responsive.css
+++ b/css/responsive.css
@@ -64,7 +64,7 @@
     display: block;
     float: right;
     font-size: 1.5em;
-    padding: 10px 20px;
+    /*padding: 10px 20px;*/
   }
   #logo h2 {
     display: none;
