Automatically backed up by Learn

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -65,7 +65,7 @@
     float: right;
     font-size: 1.5em;
     padding: 10px 20px;
-    /*width: auto;*/
+    width: auto;
   }
   #logo h2 {
     display: none;
